conan build example
Signed-off-by: yhmo <yihua.mo@zilliz.com>

--- a/.gitignore
+++ b/.gitignore
@@ -44,13 +44,21 @@
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
-# output
+# Build directories
 cmake_build/
 cmake-build-debug/
 build/
 .cache/
+code_coverage/
+
+# Conan generated files
+**/CMakePresets.json
+**/CMakeUserPresets.json
+
+# Logs
 logs/
 *.pyc
-logs/
-code_coverage/
