--- a/with-conan/CMakeLists.txt
+++ b/with-conan/CMakeLists.txt
@@ -14,8 +14,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cmake_minimum_required(VERSION 3.5)
-project(milvus_sdk_example LANGUAGES CXX C)
+cmake_minimum_required(VERSION 3.14)
+project(milvus_sdk_example_with_conan LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
@@ -25,14 +25,33 @@ if ( "${CMAKE_BUILD_TYPE}" STREQUAL "")
 endif ()
 
 include_guard(GLOBAL)
+
+# Find Conan-provided dependencies first
+if(BUILD_FROM_CONAN)
+    find_package(gRPC CONFIG REQUIRED)
+    find_package(protobuf CONFIG REQUIRED)
+    find_package(absl CONFIG REQUIRED)
+    find_package(nlohmann_json CONFIG REQUIRED)
+    
+    message(STATUS "Using Conan-provided packages:")
+    message(STATUS "  gRPC found: ${gRPC_FOUND}")
+    message(STATUS "  Protobuf found: ${Protobuf_FOUND}")
+    message(STATUS "  Abseil found: ${absl_FOUND}")
+    message(STATUS "  nlohmann_json found: ${nlohmann_json_FOUND}")
+endif()
+
 include(FetchContent)
+
+# Set BUILD_FROM_CONAN=ON for milvus-sdk
+set(BUILD_FROM_CONAN ON CACHE BOOL "Build from conan" FORCE)
 
 FetchContent_Declare(
     milvus-sdk
     GIT_REPOSITORY    https://github.com/milvus-io/milvus-sdk-cpp.git
-    GIT_TAG           v2.6.1
+    GIT_TAG           2.6
     GIT_SHALLOW       TRUE
     GIT_PROGRESS      TRUE
+    UPDATE_DISCONNECTED TRUE
 )
 
 FetchContent_MakeAvailable(milvus-sdk)
@@ -40,12 +59,9 @@ FetchContent_MakeAvailable(milvus-sdk)
 message(STATUS "  milvus-sdk_SOURCE_DIR: ${milvus-sdk_SOURCE_DIR}")
 message(STATUS "  milvus-sdk_BINARY_DIR: ${milvus-sdk_BINARY_DIR}")
 
-include_directories(${milvus-sdk_SOURCE_DIR}/src/include)
-link_directories(${milvus-sdk_BINARY_DIR}/src)
-
+# Build example executable
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src src_files)
 add_executable(my_program ${src_files})
 
-
+# Link to milvus_sdk - it will bring all dependencies
 target_link_libraries(my_program milvus_sdk)
-
